update DBS script to numeric

--- a/scripts/DBS_cleaning_script.Rmd
+++ b/scripts/DBS_cleaning_script.Rmd
@@ -41,39 +41,39 @@ raw_il6_df <- read_excel(dbs_fp, sheet = "IL6")
 ```{r al-vars}
 #CHO AL vars
 cho_df <- raw_cho_df %>% 
-  mutate(CHO_AL  = ifelse(PE_CHO >= 240, "Yes", "No"),
-         CHO_PAL = ifelse(PE_CHO >= quantile(PE_CHO, 0.75, na.rm = TRUE), "Yes", "No"))
+  mutate(CHO_AL  = ifelse(PE_CHO >= 240, 1, 0),
+         CHO_PAL = ifelse(PE_CHO >= quantile(PE_CHO, 0.75, na.rm = TRUE), 1, 0))
 
 #CRP AL vars
 crp_df <- raw_crp_df %>% 
-  mutate(CRP_AL  = ifelse(as.numeric(PE_CRP) >= 0.3, "Yes", "No"),
-         CRP_PAL = ifelse(as.numeric(PE_CRP) >= quantile(as.numeric(PE_CRP), 0.75, na.rm = TRUE), "Yes", "No")) %>% 
-  mutate_at(vars(CRP_AL, CRP_PAL), ~ ifelse(Study_Sample_ID == "HR177", "No", .)) 
+  mutate(CRP_AL  = ifelse(as.numeric(PE_CRP) >= 0.3, 1, 0),
+         CRP_PAL = ifelse(as.numeric(PE_CRP) >= quantile(as.numeric(PE_CRP), 0.75, na.rm = TRUE), 1, 0)) %>% 
+  mutate_at(vars(CRP_AL, CRP_PAL), ~ ifelse(Study_Sample_ID == "HR177", 0, .)) #force <10 to zero
 
 #IL6 AL vars
 il6_df <- raw_il6_df %>% 
-  mutate(IL6_AL  = ifelse(PE_IL6 >= 6.1, "Yes", "No"),
-         IL6_PAL = ifelse(PE_IL6 >= quantile(PE_IL6, 0.75, na.rm = TRUE), "Yes", "No"))
+  mutate(IL6_AL  = ifelse(PE_IL6 >= 6.1, 1, 0),
+         IL6_PAL = ifelse(PE_IL6 >= quantile(PE_IL6, 0.75, na.rm = TRUE), 1, 0))
 
 #HDL AL vars
 hdl_df <- raw_hdl_df %>% 
-  mutate(HDL_AL  = ifelse(PE_HDL <= 39, "Yes", "No"),
-         HDL_PAL = ifelse(PE_HDL >= quantile(PE_HDL, 0.75, na.rm = TRUE), "Yes", "No"))
+  mutate(HDL_AL  = ifelse(PE_HDL <= 39, 1, 0),
+         HDL_PAL = ifelse(PE_HDL >= quantile(PE_HDL, 0.75, na.rm = TRUE), 1, 0))
 
 #TRG AL vars
 trg_df <- raw_trg_df %>% 
-  mutate(TRG_AL  = ifelse(PE_TRG >= 150, "Yes", "No"),
-         TRG_PAL = ifelse(PE_TRG >= quantile(PE_TRG, 0.75, na.rm = TRUE), "Yes", "No"))
+  mutate(TRG_AL  = ifelse(PE_TRG >= 150, 1, 0),
+         TRG_PAL = ifelse(PE_TRG >= quantile(PE_TRG, 0.75, na.rm = TRUE), 1, 0))
 
 #A1C AL vars
 a1c_df <- raw_a1c_df %>% 
-  mutate(A1C_AL  = ifelse(HbA1c >= 6.5, "Yes", "No"),
-         AIC_PAL = ifelse(HbA1c >= quantile(HbA1c, 0.75, na.rm = TRUE), "Yes", "No"))
+  mutate(A1C_AL  = ifelse(HbA1c >= 6.5, 1, 0),
+         AIC_PAL = ifelse(HbA1c >= quantile(HbA1c, 0.75, na.rm = TRUE), 1, 0))
 
 #EBV AL vars
 ebv_df <- raw_ebv_df %>% 
-  mutate(#EBV_AL  = ifelse(PE_EBV >= #, "Yes", "No"),
-         EBV_PAL = ifelse(PE_EBV >= quantile(PE_EBV, 0.75, na.rm = TRUE), "Yes", "No"))
+  mutate(#EBV_AL  = ifelse(PE_EBV >= #, 1, 0),
+         EBV_PAL = ifelse(PE_EBV >= quantile(PE_EBV, 0.75, na.rm = TRUE), 1, 0))
 
 ```
 
@@ -95,7 +95,7 @@ al_df <- full_df %>%
   select(Study_Sample_ID, ends_with("al"))
 
 #export as same format with new AL variables in respective tabs
-#write.xlsx(list("CHO" = cho_df, "HDL" = hdl_df, "TRG" = trg_df, "CRP" = crp_df, "EBV" = ebv_df, "A1c" = a1c_df, "IL6" = il6_df), file = "do_not_push/dbs_full.xlsx")
+write.xlsx(list("CHO" = cho_df, "HDL" = hdl_df, "TRG" = trg_df, "CRP" = crp_df, "EBV" = ebv_df, "A1c" = a1c_df, "IL6" = il6_df), file = "do_not_push/dbs_full.xlsx")
 
 ```
 
